--- a/index.html
+++ b/index.html
@@ -142,10 +142,6 @@
       options: { responsive: true }
     });
 
-    // Landbot Chatbot Embed
-    new Landbot.Livechat({
-      configUrl: 'https://chats.landbot.io/v3/H-XXXXX-YYYYYY/index.json'
-    });
-  </script>
+<script src="//code.tidio.co/ejdjuq91kuiansj92o4s7d0cfd3u6ljj.js" async></script>
 </body>
 </html>
